<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mf_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.MapsFragment">


        <TextView
            android:id="@+id/mf_tv_addingNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/adding_new"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/mf_fl_adding_hashMap"
            android:layout_width="120dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toStartOf="@+id/mf_fl_adding_treeMap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mf_tv_addingNew">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hashmap">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mf_et_adding_hashMap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:text="@string/space"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/mf_cpi_adding_hashMap"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center|bottom"
                android:indeterminate="true" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/mf_fl_adding_treeMap"
            android:layout_width="120dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mf_fl_adding_hashMap"
            app:layout_constraintTop_toBottomOf="@+id/mf_tv_addingNew">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/treemap">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mf_et_adding_treeMap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:text="@string/space"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/mf_cpi_adding_treeMap"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center|bottom"
                android:indeterminate="true" />

        </FrameLayout>

        <TextView
            android:id="@+id/mf_tv_searchByKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/search_by_key"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mf_fl_adding_hashMap" />


        <FrameLayout
            android:id="@+id/mf_fl_searchByKey_hashMap"
            android:layout_width="120dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toStartOf="@+id/mf_fl_searchByKey_treeMap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mf_tv_searchByKey">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hashmap">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mf_et_searchByKey_hashMap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:text="@string/space"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/mf_cpi_searchByKey_hashMap"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center|bottom"
                android:indeterminate="true" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/mf_fl_searchByKey_treeMap"
            android:layout_width="120dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mf_fl_searchByKey_hashMap"
            app:layout_constraintTop_toBottomOf="@+id/mf_tv_searchByKey">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/treemap">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mf_et_searchByKey_treeMap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:text="@string/space"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/mf_cpi_searchByKey_treeMap"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center|bottom"
                android:indeterminate="true" />

        </FrameLayout>

        <TextView
            android:id="@+id/mf_tv_removing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/removing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mf_fl_searchByKey_hashMap" />

        <FrameLayout
            android:id="@+id/mf_fl_removing_hashMap"
            android:layout_width="120dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toStartOf="@+id/mf_fl_removing_treeMap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mf_tv_removing">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hashmap">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mf_et_removing_hashMap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:text="@string/space"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/mf_cpi_removing_hashMap"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center|bottom"
                android:indeterminate="true" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/mf_fl_removing_treeMap"
            android:layout_width="120dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mf_fl_removing_hashMap"
            app:layout_constraintTop_toBottomOf="@+id/mf_tv_removing">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/treemap">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mf_et_removing_treeMap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:text="@string/space"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/mf_cpi_removing_treeMap"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center|bottom"
                android:indeterminate="true" />

        </FrameLayout>

        <Button
            android:id="@+id/mf_btn_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="100dp"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/mf_map_size_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="16dp"
        android:text="@string/map_size_desc"
        android:textSize="20sp" />

    <FrameLayout
        android:id="@+id/mf_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="16dp"
            android:hint="@string/map_size">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mf_et_mapSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/mf_btn_calculate"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="center|bottom"
            android:layout_margin="16dp"
            android:text="@string/calculate"
            android:textSize="25sp" />
    </FrameLayout>
</LinearLayout>
